--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,6 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
 
   #score {
@@ -27,10 +28,15 @@ body {
     font-size: 1.15rem;
   }
 
+  #detalii {
+    color: gray;
+  }
+
   #game {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
   }
 
   #titlu {
